# doug-lightning-hydra-template

./: .gitignore  .pre-commit-config.yaml  TODO.txt  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yml
configs/: eval.yaml  train.yaml
configs/data/: mnist.yaml
configs/debug/: default.yaml
configs/paths/: default.yaml
src/: eval.py  train.py
src/data/: mnist_datamodule.py
src/models/: mnist_module.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  persistence.py  pylogger.py  ranked_logger.py  rich_utils.py  task_helpers.py  utils.py
tests/: conftest.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
